--- a/test-lib/build.gradle
+++ b/test-lib/build.gradle
@@ -1,9 +1,27 @@
 apply plugin: 'com.android.library'
 
 ext {
-    PUBLISH_GROUP_ID = 'china.rodrigo'
-    PUBLISH_ARTIFACT_ID = 'test-lib'
-    PUBLISH_VERSION = '1.0'
+    bintrayRepo = 'maven'
+    bintrayName = 'test-lib'
+
+    publishedGroupId = 'br.com.rtchina'
+    libraryName = 'TestLib'
+    artifact = 'test-lib'
+
+    libraryDescription = 'An Android test lib for debugging'
+
+    siteUrl = 'https://github.com/rtchina/android-lib-test'
+    gitUrl = 'https://github.com/rtchina/android-lib-test.git'
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'rtchina'
+    developerName = 'Rodrigo China'
+    developerEmail = 'rodrigo.china@tenda.digital'
+
+    licenseName = 'MIT License'
+    licenseUrl = 'https://opensource.org/licenses/mit-license.php'
+    allLicenses = ["MIT"]
 }
 
 android {
@@ -37,4 +55,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
 
-apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
